@@ -1,6 +1,5 @@
 package net.geant.nmaas.portal.api.market;
 
-import com.google.common.collect.ImmutableMap;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -32,6 +31,7 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @RestController
@@ -105,9 +105,10 @@ public class RegistrationController {
     private void sendMail(User user) {
         MailAttributes mailAttributes = MailAttributes
                 .builder()
-                .otherAttributes(ImmutableMap.of("newUser", user.getUsername()))
+                .otherAttributes(Map.of("newUser", user.getUsername()))
                 .mailType(MailType.REGISTRATION)
                 .build();
-        this.eventPublisher.publishEvent(new NotificationEvent(this, mailAttributes));
+        eventPublisher.publishEvent(new NotificationEvent(this, mailAttributes));
     }
+
 }
